[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "enigma"
version = "1.0.0"
description = "A Python implementation of the German Enigma Machine."
authors = ["Alex Gardner"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "enigma", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
